# ChangeLog for app-emacs/wanderlust
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/wanderlust/ChangeLog,v 1.98 2015/06/05 12:40:32 jlec Exp $

  05 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

  02 Mar 2015; Ulrich Müller <ulm@gentoo.org>
  -wanderlust-2.15.9_pre20120923.ebuild:
  Remove old.

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org>
  wanderlust-2.15.9_p20130619.ebuild:
  Stable for ppc, wrt bug #505056

  02 Aug 2014; Raúl Porcel <armin76@gentoo.org> wanderlust-2.14.0-r6.ebuild,
  wanderlust-2.15.9_pre20120923.ebuild, wanderlust-2.15.9_p20130619.ebuild:
  Drop alpha keywords

  01 Aug 2014; Raúl Porcel <armin76@gentoo.org> wanderlust-2.14.0-r6.ebuild,
  wanderlust-2.15.9_pre20120923.ebuild, wanderlust-2.15.9_p20130619.ebuild:
  Drop sparc keyword

  18 Jul 2014; Tobias Klausmann <klausman@gentoo.org>
  wanderlust-2.15.9_p20130619.ebuild:
  Stable on alpha, bug #505056

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  wanderlust-2.15.9_p20130619.ebuild:
  x86 stable wrt bug #505056

  29 Mar 2014; Chema Alonso <nimiux@gentoo.org>
  wanderlust-2.15.9_p20130619.ebuild:
  Stable for amd64 wrt bug #505056

*wanderlust-2.15.9_p20130619 (18 Feb 2014)

  18 Feb 2014; Ulrich Müller <ulm@gentoo.org>
  -wanderlust-2.15.9_pre20101102.ebuild, +wanderlust-2.15.9_p20130619.ebuild:
  New snapshot. Correct versioning to _p because this is after the 2.15.9 tag.
  Remove intermediate version.

*wanderlust-2.15.9_pre20120923 (21 Jan 2013)

  21 Jan 2013; Ulrich Müller <ulm@gentoo.org> wanderlust-2.14.0-r6.ebuild,
  -wanderlust-2.15.9_pre20100125.ebuild, wanderlust-2.15.9_pre20101102.ebuild,
  +wanderlust-2.15.9_pre20120923.ebuild:
  New snapshot, bug 447852. Update HOMEPAGE. Specify LICENSE more precisely.
  Remove intermediate version.

*wanderlust-2.15.9_pre20101102 (26 Dec 2010)

  26 Dec 2010; Ulrich Mueller <ulm@gentoo.org>