@@ -4,29 +4,26 @@ Hash: SHA512
 AUX 50wanderlust-gentoo.el 244 SHA256 de1718862e2b99d1c6e65daac84834a933bbafd6f64cbed129df0528ac76f811 SHA512 2057a8d18d5c7c91c968921799d502e02a61718d437ce9a69de68ebe4f409414a799ca7b5737a8994afd52793cf03eebce03b85311db02c441efba92f0d30233 WHIRLPOOL 6525ecb3f59234cb0ca8701ccc41164907cfc2a70c8df4190ba16baf1370a2597cc8f26dca8614f8a2754c80b74a40d2e84ff268b09edf7c35228cb0768f8958
 AUX wanderlust-2.14.0-smtp-end-of-line.patch 628 SHA256 7d6315b46f4be4e8cf8c851e4d567319e1f05dc2cfc12f166dd4aa987dc36e52 SHA512 a365e24bd369dd3dcc66c45651742a33bbe847536c1362c466a64cdbcdc0908f5119e8daed70f42e2634bf4d09b9e1c4dabf8405794fa915685b1647aa5eeeef WHIRLPOOL 593d624e4440cd84f4a0b48f714631861c4db1596464474b1ac37db96873e3886b826b17b6feacd2b6c0ef3273016089e769c1026ae9ac78376329e4bef19b8d
 AUX wanderlust-2.14.0-texinfo-garbage.patch 473 SHA256 916565859afd2b7588ddeddf4897c33c35d1cb4a09700c5633626f127290e036 SHA512 1f728259179beba3cc543725b5087ce2d80c9167c9f447ed60aa38225b23eef7da2a018f6150ee6eeadea0d7bf4d55269c32df9bdb4120e4a99d3955bba839ce WHIRLPOOL 76f1c142ed831c720dc58c0f3c06c4beec7a31d3ae665672db6dc642580dad543bbd486766eac5e4a50b687ec395f074702a2fc0b007a8b256ef84f1579a42bc
-DIST wanderlust-2.14.0-20050405.patch.gz 3926 SHA256 240f32ece554b2afe7142ea557b41d0eb9667b8003ca00d390abe62e4b68ce16 SHA512 103e8eda374eab453363f3a735d877e313ff341e09abd66093bd090b404738d42d98edf5d1c9c8e8966963bf972d462aebc28ea6e470126af9266188247c4044 WHIRLPOOL 22518205351c26fe38e4c734778a3754fced5309a21395bd471b82f76e19baddeb333561572b8b4be9d02d744c8d9f7212c97270167af463e983d336393b280b
 DIST wanderlust-2.15.9_p20130619.tar.xz 818124 SHA256 cabc2f1a025d6c93484bc60dcda0672a9a8eef6c2c1932a21cfa6f2e2f377bcb SHA512 91bdcc1b29370b7be7a2072f4d8c638b3c0604ba31b5419952b848af268e73a3f199f07a88caabec56f66b38013e0f9cd7c1de26b46d1062ddff782e8080d4e0 WHIRLPOOL 99eac7cb2a623389161dc1e9cc0883b89e92d411c93757180140d94c7ce352d0b76a392bdd4439f551ecc5bd934b70a15391df6a60103ad97f1b3fd63de6b95a
-DIST wl-2.14.0.tar.gz 1101505 SHA256 883b61e7e9560aff35efcf7d0d48b0ddd7cde598895ffd111ff214072253eb1f SHA512 edb49c0c9ddbd50cba4ce4cdd1b2d609cee9553d063aeb4775d0b43e0ed83cc6374aa47b11b3ff94a55827f7a9a29f7c1054e0fd9b3a5a25a2c410b241d268d2 WHIRLPOOL 14e3c879e98ffbe2ae7e4ed1b63328f1937b7ca31aebae500b1bf100a6ca5db78f72c87ecd2f0aa65d1e3468741d2753e0ac2ddc98d9108482935bef0590a03b
-EBUILD wanderlust-2.14.0-r6.ebuild 1677 SHA256 b3d05e71146fdc85b8b376b3897a7c2fafda89ae13d5fe2715fdedfade862eaa SHA512 c08791e0c962b520f9e97f84077373fbb0f20747864174cda0f8280c42b46f2d79f556c51c4bff1af03778ab97b9536442bbee5308ed00e4ad694b8c978d73a4 WHIRLPOOL f24dc38424ecf0303a0688af07e4f6da343994318bf22d218527f3a723f0322a088a548e3ed31202344448ba110d3581e6db7649e9f0fb8236b4d398e5b39fc0
 EBUILD wanderlust-2.15.9_p20130619.ebuild 1428 SHA256 34bcfdea3dc5d5218b55465dc4db58f7f2736564033e6b3bd11ce829bc8c5eda SHA512 7d1195fab009bd3f630d636d847ff8a8cc35f089ffd077bfc6ceb6a5a1c7fd3936d133c59976575d6da445b2a3820dfb7df6078aeb6959cf1787bde9ee43ffe7 WHIRLPOOL 3d6818ea39b80b5e5b15a86e8fef5d100520f1947cee3dcc5e10e2024a5436d70de1822beabde75d49f184bb80db2840c36e7753d11685d3d6bc40757c538568
-MISC ChangeLog 17461 SHA256 23659c69946c6459d68337d4d6905ffda4e25c63786f22e394aa55f7450d3591 SHA512 14b9229db4976d75b42e0c0a8c19cfa8401d67d7287d7f1a5d2d0ca921ca1b547a58b2c7b8f473dd1fdd3ac246b7e26077232c35f54e35bf10e6d88791dc2368 WHIRLPOOL 2baf34de38647c10b7066ddcc104c5b73afea827f4fd8e6072d5366de7d9b472c777cded5dc0cc0fae8f6e5b4ffba97945fd3c03f4e909294bf9250505fe3215
+MISC ChangeLog 17567 SHA256 2f498b1e7c638fbbf89368cffb73d3462572c8c67f845ba80fcf3943fbeb9704 SHA512 4e34111b45a3899180097027c9c76703652c1a1a1ccfcf4a9f3f6895d0ccd0259add72464dd5d6921fc06edb2fcda22749f28f56f69a7a0926657d417c2e984d WHIRLPOOL 820b16dbc8ecbf4477e7f1c055d2872daed42708a2416ae907056fe2db81339c4fcd12fe2db29e2ac81dbe654ef652ad1a2cf6c4f66be787eed59bd1dc34ea9a
 MISC metadata.xml 366 SHA256 705c95442534f218b637f5faf9d34b31eb6d31fac825c70e79ba7c2ba287c6c2 SHA512 c404d969be5e4c80a117763dd837bb4d545aedf7b9e18389cfcdd1e61858bff98aa6ac317a36aca85e83a29419a937a9fe4746489592a867c3372df1ebe12cb1 WHIRLPOOL 7708cf7dde34a885f387c0c56604ed8ba6094047b535ef144cc14171daf6dd5caadecbc4d6b4b25d0f1af83811b6663c7080ba347a175d067c0cd05c79dea7e4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJVcZjBXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVcZkLXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmi5tcP/iaZFsNlacIRfE/SP25deb65
-IKqSpVX6RkHMxJBtIX9V2rHcxDYhtYztTrmfGsF2pkp1m7cflKCtxt+Q7oEOjiM0
-CcjByXAjfB8OamVRuFXaKrS2ez7WxaT7sZeeaJ/8DIpko6tVn/XGPpvIESAyqrLh
-NvybjQicaCf8qMdG2T208+UrSgrxKeRCU+5wtSYn1aXy42bnkZBtHoBf/hRYvpAd
-xpi2fIuVKZMrazOGo7Zu7HgnmVqEBxw8/yUfsX8CqTPz4Kt0JOYnIL5hXpHp8S53
-ZDzMObUa74XdmAfknrUtT1jvHBvMGLzEKXdXcLAP5m75rIpF0tuKiQu2nx+sE5vj
-L4sS6qrhBac8kb0DIaHW389VlR5q7EktCXLkWiTBlL6UeRrDyciIxMF7kQoZBMmK
-Lskc7H6Dkb8k8z2Y7di/lWvnA3jqd+EdbZuDEJJpgkaF1hAtvbsVaojpr1Qvi5+W
-MlacoTzxqVViV/P4fja2j2soiWpAPFpCCsUC/au90VZotWhq4+q2JGFSG4KIItjL
-h7F0dxD5njLYh4cYe/gBBYn0zZSnWwbFoK6J59bzq5/PjlRUblS/bhoiD0tYWPFE
-z8LtxnH+i7dlCSkWe7CVyIcHi2e8KDagrRRlBFL+E6RxHdpb8Q4nZaTcc71MIvEK
-OBhM7zsQ/atZEMz4Grm9
-=aLuq
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiWLsQAMBWAjFUEwQht9KXKyBvzOYI
+cKGOFMmqKPoknOhwup8sm9+Vpex7phsPGm6FndqX/apr67rov+2vqyrlUPFpKowV
+cz6lbuxmHZD7dlz2W5qiqhEGm/tooyBIc+pilxQ8TfgBPp6mZlgnvmJ7hePy7Jmh
+OTJR2xHgxVRgMchO7cznLceh7VmDJvWthI0WltqiOX4OcsLCjTR5ab5p5mDTX6sd
+7QyQBZgd2RsrmB1zz638sNXb43WFYJMaxZadvPHAzH0Gj2m8TQ0t1Xr2cLY6Z3wn
+MtsUY5kH+u0sCPIHOeFcjNbexSm+L1mW2sq5hh5+AfhZ28iuNht0BK9ly4a+YjpX
+DppfdQgGroL0rp8NlJgRPJfBdEJendbx+ae78mSuv0F/NnhLXYcJwlewIeM9dUZ3
+bzTC52CORze6YNPQr+LJK5mRYPatQpp7aY2iiGBo+qliW2WhickJoC9R71PXAw8A
+afSfyMO4JWNxX386TqA3PQfXWgtgYqn2GHS79pT5VkCeVwkuLPNAcdryEpBV1x7h
+gPH7eW/nBsBSgsCnduBNoyaDIcneIoMfJxXGGpSfyljHIozNvTTvydYa3YceGlvS
+j/xkkyefXTjbgdGwJ6wCFbw2B8VE59UPeLlPCLW5tWXZyTPIZG/PfINRsJtWSyHw
+htEddZmwg3D8E0MgSnh3
+=aFl6
 -----END PGP SIGNATURE-----
