@@ -1,64 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/wanderlust/wanderlust-2.14.0-r6.ebuild,v 1.9 2014/08/02 17:36:05 armin76 Exp $
-
-EAPI=3
-
-inherit elisp eutils
-
-MY_P="wl-${PV/_/}"
-DESCRIPTION="Yet Another Message Interface on Emacsen"
-HOMEPAGE="http://www.gohome.org/wl/"
-SRC_URI="ftp://ftp.gohome.org/wl/stable/${MY_P}.tar.gz
-	ftp://ftp.gohome.org/wl/beta/${MY_P}.tar.gz
-	mirror://gentoo/${P}-20050405.patch.gz"
-
-LICENSE="GPL-2+"
-SLOT="0"
-KEYWORDS="amd64 ppc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
-IUSE="bbdb ssl linguas_ja"
-
-DEPEND=">=app-emacs/apel-10.6
-	virtual/emacs-flim
-	app-emacs/semi
-	bbdb? ( app-emacs/bbdb )"
-RDEPEND="!app-emacs/wanderlust-cvs
-	${DEPEND}"
-
-S="${WORKDIR}/${MY_P}"
-ELISP_PATCHES="${P}-20050405.patch
-	${P}-smtp-end-of-line.patch
-	${P}-texinfo-garbage.patch"
-SITEFILE="50${PN}-gentoo.el"
-
-src_configure() {
-	local lang="\"en\""
-	use linguas_ja && lang="${lang} \"ja\""
-	echo "(setq wl-info-lang '(${lang}) wl-news-lang '(${lang}))" >>WL-CFG
-	use ssl && echo "(setq wl-install-utils t)" >>WL-CFG
-}
-
-src_compile() {
-	emake || die "emake failed"
-	emake info || die "emake info failed"
-}
-
-src_install() {
-	emake \
-		LISPDIR="${ED}${SITELISP}" \
-		PIXMAPDIR="${ED}${SITEETC}/wl/icons" \
-		install || die "emake install failed"
-
-	elisp-site-file-install "${FILESDIR}/${SITEFILE}" wl || die
-
-	insinto "${SITEETC}/wl/samples/en"
-	doins samples/en/*
-	doinfo doc/wl*.info
-	dodoc BUGS ChangeLog INSTALL NEWS README
-
-	if use linguas_ja; then
-		insinto "${SITEETC}/wl/samples/ja"
-		doins samples/ja/*
-		dodoc BUGS.ja INSTALL.ja NEWS.ja README.ja
-	fi
-}
